Project svr {
  database_type: 'MySQL'
}

Enum "teams_type_enum" {
  "betrieb"
  "feuerwehr"
  "verein"
}

Enum "competition_type_enum" {
  "betrieb"
  "feuerwehr"
  "pokal"
  "runden"
}

Enum "scoring_mode_enum" {
  "full_ring"
  "tenths"
}

Enum "users_role_enum" {
  "admin"
  "viewer"
}

Table "persons" {
  "uid" int(11) [pk, not null, increment]
  "first_name" varchar(255) [default: NULL]
  "last_name" varchar(255) [default: NULL]
  "birthdate" date [default: NULL]
  "profi" tinyint(1) [not null, default: 0]
}

Table "users" {
  "id" int(11) [pk, not null, increment]
  "username" varchar(100) [not null]
  "display_name" varchar(255) [default: NULL]
  "role" users_role_enum [not null, default: "viewer"]
}

Table "teams" {
  "uid" int(11) [pk, not null, increment]
  "name" varchar(255) [not null]
  "type" teams_type_enum [not null]
  "competition" int(11) [not null]
}

Table "competitions" {
  "uid" int(11) [pk, not null, increment]
  "name" varchar(255) [not null]
  "type" competition_type_enum
  "start" datetime [not null]
  "end" datetime [not null]
  "max_team_size" int(11) [default: NULL]
}

Table "disciplines" {
  "uid" int(11) [pk, not null, increment]
  "name" varchar(255) [not null]
  "shots_per_series" int(11) [not null, default: 10]
  "max_series_count" int(11) [not null, default: 1]
  "scoring_mode" scoring_mode_enum [not null, default: "tenths"]
  "max_score_per_shot" decimal(4,1) [not null, default: 10.9]
}

Table "competitions_disciplines_mm" {
  "competition" int(11) [not null]
  "discipline" int(11) [not null]
}

Table "rounds" {
  "uid" int(11) [pk, not null, increment]
  "competition" int(11) [not null]
  "name" varchar(255) [default: NULL]
  "start" datetime [not null]
  "end" datetime [not null]
}

Table "team_member" {
  "uid" int(11) [pk, not null, increment]
  "team" int(11) [not null]
  "person" int(11) [not null]
  "discipline" int(11) [not null]

  indexes {
    (team, person, discipline) [unique]
  }
}

Table "series" {
  "uid" int(11) [pk, not null, increment]
  "person" int(11) [not null]
  "discipline" int(11) [not null]
  "round" int(11) [not null]
  "team" int(11) [default: NULL]
  "shots_count" int(11) [not null, default: 0]
  "import_file" int(11) [default: NULL]
}

Table "shots" {
  "uid" int(11) [pk, not null, increment]
  "series" int(11) [not null]
  "shot_index" int(4) [not null]
  "value" decimal(4,1) [not null]
  "x" decimal(8,4) [default: NULL]
  "y" decimal(8,4) [default: NULL]
  "recorded_at" datetime [not null, default: `current_timestamp()`]
}

Ref: "team_member"."person" > "persons"."uid"
Ref: "team_member"."team" > "teams"."uid"
Ref: "team_member"."discipline" > "disciplines"."uid"

Ref: "teams"."competition" > "competitions"."uid"

Ref: "competitions_disciplines_mm"."discipline" > "disciplines"."uid"
Ref: "competitions_disciplines_mm"."competition" > "competitions"."uid"

Ref: "series"."person" > "persons"."uid"
Ref: "series"."discipline" > "disciplines"."uid"
Ref: "series"."round" > "rounds"."uid"
Ref: "series"."team" > "teams"."uid"
Ref: "series"."import_file" > "import_files"."id"

Ref: "shots"."series" > "series"."uid"

Ref: "rounds"."competition" > "competitions"."uid"
